--- a/build.gradle
+++ b/build.gradle
@@ -15,11 +15,13 @@ buildscript {
     }
 }
 
+
 allprojects {
     repositories {
-        google()
+        maven { url "https://maven.google.com" }
         jcenter()
-        maven { url "https://jitpack.io" }
+        maven { url 'https://jitpack.io' }
+        google()
     }
 }
 
