--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.healthclock.healthclock">
 
     <application
+        android:name=".app.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,19 +17,16 @@
             android:name="design_height"
             android:value="1334" />
 
-        <activity android:name=".ui.activity.MainActivity">
-
-        </activity>
+        <activity android:name=".ui.activity.MainActivity"></activity>
         <activity android:name=".ui.activity.RegisterActivity" />
-        <activity
-            android:name=".ui.activity.LoginActivity"
-           >
+        <activity android:name=".ui.activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.activity.ForgetPwdActivity"></activity>
     </application>
 
 </manifest>
