--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,14 +30,21 @@ dependencies {
     //皮肤设置
     implementation project(':android-multi-theme')
     //okrx2
-    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.5.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
-    implementation 'io.reactivex:rxandroid:1.2.1'
-    implementation 'io.reactivex:rxjava:1.2.1'
+//    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+//    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+//    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+//    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
+//    implementation 'com.squareup.okhttp3:okhttp:3.5.0'
+//    implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
+//    implementation 'io.reactivex:rxandroid:1.2.1'
+//    implementation 'io.reactivex:rxjava:1.2.1'
+
+
+    //网络
+    implementation 'com.lzy.net:okrx2:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'com.readystatesoftware.chuck:library:1.0.4'
+
 
     implementation 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
@@ -48,5 +55,4 @@ dependencies {
     implementation 'com.zhy:autolayout:1.4.5'
     //轮播图库
     implementation 'cn.bingoogolapple:bga-banner:2.1.7@aar'
-    implementation 'com.elvishew:xlog:1.6.1'
 }
