--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,10 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.healthclock.healthclock"
-        minSdkVersion 22
-        targetSdkVersion 28
+        minSdkVersion 21
+        targetSdkVersion 22
         versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        versionName "1.0.0.1"
     }
     buildTypes {
         release {
@@ -29,30 +28,23 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     //皮肤设置
     implementation project(':android-multi-theme')
-    //okrx2
-//    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
-//    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
-//    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-//    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
-//    implementation 'com.squareup.okhttp3:okhttp:3.5.0'
-//    implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
-//    implementation 'io.reactivex:rxandroid:1.2.1'
-//    implementation 'io.reactivex:rxjava:1.2.1'
 
 
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
     //网络
-    implementation 'com.lzy.net:okrx2:2.0.2'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation 'com.readystatesoftware.chuck:library:1.0.4'
-
-
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.5.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'io.reactivex:rxjava:1.2.1'
+    implementation 'com.google.code.gson:gson:2.8.0'
+    //网络
     implementation 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
-    implementation 'com.google.code.gson:gson:2.8.0'
-
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
-    implementation 'com.zhy:autolayout:1.4.5'
     //轮播图库
     implementation 'cn.bingoogolapple:bga-banner:2.1.7@aar'
 }
