--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     //相册选择
     implementation 'com.guoqi.widget:actionsheet:1.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 }
