--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,11 +53,7 @@
         <activity android:name=".ui.activity.MainActivity" />
         <activity android:name=".ui.activity.login.RegisterActivity" />
         <activity android:name=".ui.activity.login.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".ui.activity.login.ForgetPwdActivity" />
         <activity android:name=".ui.activity.login.RegisterProtocolActivity" />
@@ -91,7 +87,14 @@
         <activity android:name=".ui.activity.member.EditAddressActivity" />
         <activity android:name=".ui.activity.member.HealthScoreActivity" />
         <activity android:name=".ui.activity.member.HealthManagementActivity" />
-        <activity android:name=".ui.activity.member.HealthRecordsActivity"></activity>
+        <activity android:name=".ui.activity.member.HealthRecordsActivity" />
+        <activity android:name=".ui.activity.login.WelComeActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
