--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,6 @@ dependencies {
     implementation 'com.guoqi.widget:actionsheet:1.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    implementation 'com.zzhoujay.richtext:richtext:2.5.2'
+    implementation project(':ZXinglib')
 }
