--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.novoda:bintray-release:0.9'
     }
 }
 
@@ -19,6 +20,7 @@ allprojects {
         maven { url "https://maven.google.com" }
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven { url 'http://repo1.maven.org/maven2' }
         google()
     }
 }
