--- a/ZXinglib/build.gradle
+++ b/ZXinglib/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -32,4 +31,6 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     testImplementation 'junit:junit:4.12'
    // api deps.zxing
+    implementation 'com.google.zxing:core:3.3.3'
+    implementation 'com.king.zxing:zxing-lite:1.1.0'
 }
