--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     implementation 'com.zzhoujay.richtext:richtext:2.5.2'
     implementation project(':ZXinglib')
+    implementation 'com.google.zxing:core:3.3.3'
+    implementation 'com.king.zxing:zxing-lite:1.1.0'
 }
