--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ allprojects {
         jcenter()
         maven { url 'https://jitpack.io' }
         maven { url 'http://repo1.maven.org/maven2' }
+        maven { url 'https://dl.bintray.com/jenly/maven' }
         google()
     }
 }
