--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
@@ -62,4 +62,11 @@ dependencies {
     implementation project(':ZXinglib')
     implementation 'com.google.zxing:core:3.3.3'
     implementation 'com.king.zxing:zxing-lite:1.1.0'
+    //微信支付宝
+    implementation(name: 'alipaySdk-15.6.2-20190416165036', ext: 'aar')
+    implementation files('libs/libammsdk.jar')
+    implementation files('libs/ShareSDK-Wechat-3.3.0.jar')
+    implementation files('libs/ShareSDK-Wechat-Core-3.3.0.jar')
+    implementation files('libs/ShareSDK-Wechat-Favorite-3.3.0.jar')
+    implementation files('libs/ShareSDK-Wechat-Moments-3.3.0.jar')
 }
