--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ buildscript {
 
 allprojects {
     repositories {
+        flatDir {
+            dirs 'libs'
+        }
+
         maven { url "https://maven.google.com" }
         jcenter()
         maven { url 'https://jitpack.io' }
