--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,5 @@ dependencies {
     implementation files('libs/ShareSDK-Wechat-Core-3.3.0.jar')
     implementation files('libs/ShareSDK-Wechat-Favorite-3.3.0.jar')
     implementation files('libs/ShareSDK-Wechat-Moments-3.3.0.jar')
+    implementation project(':alarmmanagerclock')
 }
