--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,10 @@ dependencies {
     implementation project(':alarmmanagerclock')
     implementation project(':litepal')
     implementation project(':daemon')
+    implementation project(':PagerSlidingTabStrip')
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.3'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
+    implementation 'com.squareup:otto:1.3.8'
+    implementation 'com.balysv:material-ripple:1.0.2'
+    implementation 'jp.wasabeef:recyclerview-animators:2.2.0'
 }
