--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -117,8 +117,72 @@
                 <action android:name="com.wei.BC_ACTION" />
             </intent-filter>
         </receiver>
+        <receiver
+            android:name=".broadcast.AlarmClockBroadcast"
+            android:process=":daemon">
 
-        <activity android:name=".ui.activity.main.EditAlarmActivity"></activity>
+            <!-- 广播定义单独进程，在6.0上接受不到，不定义进程退到后台也接受不到。 -->
+            <!-- 广播和后台运行的服务保持在一个线程，只要服务不死，这样就都可以接受到广播了 -->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.BOOT_COMPLETED"/> -->
+            <!-- </intent-filter> -->
+        </receiver>
+        <receiver android:name=".broadcast.BootBroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name=".broadcast.AlarmClockProcessReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.kaku.weac.AlarmClockOff" />
+            </intent-filter>
+        </receiver>
+
+        <!--
+                    <service
+                    android:name=".service.NotificationCenter"
+                    android:exported="false"
+                    android:process=":pushservice">
+                </service>
+        -->
+
+        <receiver
+            android:name=".broadcast.WakeReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.kaku.weac.wake.gray" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".service.DaemonService$DaemonInnerService"
+            android:enabled="true"
+            android:exported="false"
+            android:process=":daemon" />
+        <service
+            android:name=".broadcast.WakeReceiver$WakeNotifyService"
+            android:enabled="true"
+            android:exported="false" />
+        <service
+            android:name=".broadcast.WakeReceiver$WakeGrayInnerService"
+            android:enabled="true"
+            android:exported="false" />
+        <service
+            android:name=".service.DaemonService"
+            android:exported="true"
+            android:process=":daemon" />
+        <service android:name=".service.CountDownService" />
+
+        <activity android:name=".ui.activity.main.EditAlarmActivity" />
+        <activity android:name=".ui.activity.main.RingSelectActivity" />
+        <activity android:name=".ui.activity.main.SingleFragmentActivity" />
+        <activity android:name=".ui.activity.main.AlarmClockOntimeActivity" />
+        <activity android:name=".ui.activity.main.AlarmClockEditActivity" />
+        <activity android:name=".ui.activity.main.SingleFragmentOrdinaryActivity" />
+        <activity android:name=".ui.activity.main.AlarmClockNewActivity"></activity>
     </application>
 
 </manifest>
