--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':android-multi-theme', ':datelibrary', ':addresslibrary', ':ZXinglib', ':alarmmanagerclock', ':litepal', ':daemon', ':PagerSlidingTabStrip'
+include ':app', ':android-multi-theme', ':datelibrary', ':addresslibrary', ':ZXinglib', ':alarmmanagerclock', ':litepal', ':daemon', ':PagerSlidingTabStrip',':SwipeBackLayout'
