--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'com.novoda:bintray-release:0.9'
+        classpath "io.realm:realm-gradle-plugin:4.1.1"
     }
 }
 
