--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0.0.1"
-       // flavorDimensions "versionCode"
+        // flavorDimensions "versionCode"
         manifestPlaceholders = [UMENG_CHANNEL_VALUE: "Umeng"]
     }
     buildTypes {
@@ -62,7 +62,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation ('com.android.support.test.espresso:espresso-core:2.2.2',{
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //皮肤设置
@@ -98,10 +98,10 @@ dependencies {
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     implementation 'com.zzhoujay.richtext:richtext:2.5.2'
     implementation project(':ZXinglib')
-    implementation 'com.google.zxing:core:3.3.3'
-    implementation 'com.king.zxing:zxing-lite:1.1.0'
+//    implementation 'com.google.zxing:core:3.3.3'
+//    implementation 'com.king.zxing:zxing-lite:1.1.0'
     //微信支付宝
-  implementation(name: 'alipaySdk-15.6.2-20190416165036', ext: 'aar')
+    implementation(name: 'alipaySdk-15.6.2-20190416165036', ext: 'aar')
     implementation files('libs/libammsdk.jar')
     implementation files('libs/ShareSDK-Wechat-3.3.0.jar')
     implementation files('libs/ShareSDK-Wechat-Core-3.3.0.jar')
